# rust-api-actix-web

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  notes.txt
.sqlx/: query-054c2a9029cb27b590899d2bc79b57aae134404ac140fad5d0dff165bcf13c18.json  query-3e4e5c4be44ef130a6e886ed815bdf3e8d3d3f61e17713aa10f9912522cd84ca.json  query-41050429d56f380f479194c75d1b4e92356c285a23e580e7afea2fa812f737e6.json  query-45442094cdff368c462dadb52c7a85134e56f8f87bf4372243508dd9d873eb45.json  query-599ba2e728701bbdcd1f00663bd32704be2f5ce96095413e0b3c70a7c59bdfd3.json  query-67f26f169653a462c7c424287146c32c6be63d7345bdd5555470c5a04033819a.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-8fbff9e22da960bff7e36d0205ea3a2cd2706de76f795ca7b2f4c7ccbdc22f11.json  query-90d4da81a1552f065e26cb4a4bad7a86acda6793aa66f133dc52735c05f053c5.json  query-96cfb59dd652c2a5f7d3cd0e37ae838d82efc39d688aa9a90dca90753b51e4ac.json  query-b508a2515a5939eba5d1ab2c8210030a1a47f7af8933007cd2452b93cf73a7b1.json  query-d3ebcf603400f4bd4bb401d5ddad4e80a66099be90f6deacc04d70f8450481ef.json  query-fd4e9130ec112c447d4b8e25dce2f4fac308d27ca0dcc0e9d3244c33ace24311.json
migrations/: 20260217032927_create_user_table.sql.sql  20260217034424_create_categories_table.sql  20260217035821_create_transactions_table.sql
src/: main.rs  utils.rs
src/controllers/: auth.rs  categories.rs  me.rs  transactions.rs
src/db/: categories.rs  transactions.rs  user.rs
src/middleware/: auth.rs
